# python-project-lvl1

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: github-lint.yml
brain_games/: cli.py  game_engine.py
brain_games/games/: .calc.py.swp  calc.py  common.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_calc.py.swp  BRAIN_GAMES.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
