[tool.poetry]
name = "brain_games"
version = "0.1.0"
description = "Contain games engine, game modules and scripts to launch the game"
authors = ["akishev-ma <mikhail.akishev@gmail.com>"]
repository = "https://github.com/akishev-m/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Private :: Do Not Upload"
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_welcome:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
